Version 1.1.1
* Fix unpack/blanker issue
* Fix mark5_stream_open()

Version 1.1.0
* Start of K5 support -- not yet usable
* Implement blanking: look for fill pattern and decode to all zeros.

Version 1.0.1
* Fix new_mark5_format_from_stream()

Version 1.0
* Support of VLBA, Mark4 & Mark5B formats
* Support File and Memory streams
* Support "pure" unpacking -- no frame validation
* Big and Little Endian support