@@ -1,6 +1,9 @@
 Version 1.1.1
 * Fix unpack/blanker issue
 * Fix mark5_stream_open()
+* New functions:
+    const char *mark5_stream_list_formats();
+    struct mark5_format *new_mark5_format_from_name(const char *formatname);
 
 Version 1.1.0
 * Start of K5 support -- not yet usable
